# cxx_plugins

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  conanfile.py
.github/workflows/: linux.yml  self-hosted-linux.yml  self-hosted-windows.yml  self-hosted.yml
cmake/: cmake_modules_setup.cmake  common_flags.cmake  cxx_plugins_options.cmake  external_packages_setup.cmake  get_git_version.cmake
docs/: CMakeLists.txt  Doxyfile-mcss.in  Doxyfile.in  effective_cmake.md  modern_cmake.md  notes_on_first_meeting(DELETE).md  styleguide.md  technical_specification.md
example/: CMakeLists.txt  api.hpp  example_plugin.json  source.cpp
include/cxx_plugins/: allocator_helpers.hpp  any.hpp  arithmetic_wrapper.hpp  array.hpp  cxx_plugins.hpp  definitions.hpp  deque.hpp  forward_list.hpp  function_cast.hpp  function_proxy.hpp  function_traits.hpp  function_traits.ipp  functionref.hpp  list.hpp  map.hpp  overload_set.hpp  parser.hpp  plugin.hpp  plugin_builder.hpp  polymorphic.hpp  polymorphic_allocator.hpp  polymorphic_cast.hpp  polymorphic_ptr.hpp  polymorphic_ref.hpp  polymorphic_traits.hpp  queue.hpp  set.hpp  stack.hpp  string.hpp  string_view.hpp  tuple.hpp  tuple_impl.ipp  tuple_map.hpp  type_index.hpp  type_traits.hpp  unordered_map.hpp  unordered_set.hpp  variant.hpp  vector.hpp  vtable.hpp
include/cxx_plugins/memory/: alligned_allocator.hpp  any_allocator.hpp  mallocator.hpp  memory_common.hpp  stack_allocator.hpp
include/cxx_plugins/tuple_impl/: tuple_cat.hpp  tuple_declarations.hpp
include/sequence/: conversion.hpp  exclusive_scan.hpp  inclusive_scan.hpp  map.hpp  operators.hpp  partial_sum.hpp  size.hpp
include/tuple/: forward.hpp  tuple.hpp  tuple_cat.hpp  tuple_declarations.hpp  tuple_helpers.hpp  tuple_impl.hpp  tuple_map.hpp  tuple_storage.hpp
src/: parser.cpp  polymorphic_allocator.cpp
tests/: CMakeLists.txt  allocators_tests.cpp  any_tests.cpp  cxx_plugins_tests.cpp  example_api.cpp  example_api.hpp  function_ref_tests.cpp  function_traits_tests.cpp  packed_tuple_tests.cpp  parser_tests.cpp  polymorphic_allocator_tests.cpp  polymorphic_cast_tests.cpp  polymorphic_ref_tests.cpp  polymorphic_tests.cpp  preprocessed.txt  tuple_map_tests.cpp  tuple_tests.cpp  tuple_tests0.cpp  tuple_tests1.cpp  tuple_tests2.cpp  tuple_tests3.cpp  tuple_tests4.cpp  tuple_tests_decl.hpp  vtable_tests.cpp
